--- a/jpa-stream/pom.xml
+++ b/jpa-stream/pom.xml
@@ -3,4 +3,33 @@
   <groupId>fr.training</groupId>
   <artifactId>simple-jpa</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		
+		<mysql-connector.version>5.1.49</mysql-connector.version>
+	</properties>
+	
+	<dependencies>
+		<!-- Connecteur MySQL -->
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>${mysql-connector.version}</version>
+		</dependency>
+	    
+	    <!-- JPA / HIBERNATE -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-entitymanager</artifactId>
+		    <version>5.4.27.Final</version>
+		</dependency>
+		
+		<!-- HIBERNATE VALIDATOR : Pour valider avant envoie SQL -->
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>6.2.0.Final</version>
+		</dependency>
+	</dependencies>
 </project>
